<resources>
    <string name="app_name">btsland</string>
    <string name="font_size">16sp</string>
    <string name="font_color_white">#ffffff</string>
    <string name="font_color_gray">#5D5D5D</string>
    <string name="font_color_lightGrey">#8D8D8D</string>
    <string name="font_color_green">#458B00</string>
    <string name="font_color_red">#ff0000</string>
    <string-array name="quotes">
        <item>BTC</item>
        <item>ETH</item>
        <item>BTS</item>
        <item>LTC</item>
        <item>OMG</item>
        <item>STEEM</item>
        <item>VEN</item>
        <item>HPB</item>
        <item>OCT</item>
        <item>YOYOW</item>
        <item>DOGE</item>
        <item>HASH</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="homepage">资讯</string>

    <string name="themarket">交易</string>
    <string name="bid">买入：</string>
    <string name="ask">卖出：</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>

    <string name="wallet">钱包</string>
    <string name="asset">全部资产</string>
    <string name="accessrecord">充提记录</string>
    <string name="tradingrecord">交易记录</string>
    <string name="wholeguadan">全部挂单</string>
    <string name="walletbackup">钱包备份</string>
    <string name="transfer_accounts">转账操作</string>


    <string name="set">设置</string>
    <string name="language">语言</string>
    <string name="theme">主题</string>
    <string name="daytime">白昼模式</string>
    <string name="night">黑夜模式</string>
    <string name="guide">使用指南</string>
    <string name="trading_guide">交易向导</string>
    <string name="we">关于我们</string>
    <string name="edition">版本信息</string>


    <string name="username">btsland</string>
    <string name="alias">#404801</string>
    <string name="personage">个人信息</string>
    <string name="whitelist">白名单</string>
    <string name="privilege">权限</string>
    <string name="activity">近期活动</string>
    <string name="entrust">委单</string>

    <string name="motto">座右铭：</string>
    <string name="phone">手机号：</string>
    <string name="statement">个人说明：</string>


    <string name="wusername">账户名</string>
    <string name="whitetext">添加到白名单</string>
    <string name="whiteadd">添加</string>

    <string name="entrusttv">您好，您暂无委单</string>


    <string name="accountset">账户设置</string>


    <string name="selectlanguage">请选择系统语言 </string>
    <string name="stringzh">中文</string>
    <string name="stringen">English</string>

    <string name="title_activity_login">Sign in</string>

    <!--<string name="logoff">退出登录</string>-->
    <string name="logoff">退出登录</string>

    <!-- Strings related to login -->
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式不对</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"提供电子邮件完成所需的联系人权限"</string>
    <string name="The_user_name_must_begin_with_a_letter">用户名必须以字母开头</string>
    <string name="Username_too_short">用户名太短</string>
    <string name="User_name_cannot_end_with_一">用户名不能以“-”结尾</string>
    <string name="User_name_must_not_contain_only_letters">用户名不能只包含字母</string>
    <string name="The_password_needs_at_least_12_characters_and_contains_at_least_1_capitals_and_1_digits">
        密码长度至少12位，至少包含1个大写字母和1个数字
    </string>
    <string name="The_password_for_the_two_input_is_inconsistent">两个输入的密码不一致</string>
    <string name="User_name_is_valid_Query_is_already_available">用户名合法，正在查询是否已存在</string>
    <string name="User_name_already_exists">用户名已存在</string>
    <string name="User_name_available">用户名可用</string>
    <string name="please_wait">请稍等。。。</string>
    <string name="interval">间隔</string>
    <string name="span">跨度</string>
    <string name="total">总额：</string>
    <string name="charge">手续费：</string>
    <string name="price">价格：</string>
    <string name="vol">数量：</string>
    <string name="label_want">操作：</string>
    <string name="label_price">价格：</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="label_please_confirm">请确认订单</string>
    <string name="pwd_point">请输入您的密码</string>
    <string name="password_invalid">密码错误</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="not_logged">您好，您还没有登录</string>
    <string name="go_login">去登录</string>
    <string name="go_register">去注册</string>
    <string name="auto_refresh">自动刷新</string>
    <string name="will_be_refreshed">开启后将会自动刷新数据</string>
    <string name="select_your_language">选择您的语言</string>
    <string name="price_limit">涨跌幅样式</string>
    <string name="set_preference_color">设置您偏好的涨跌幅颜色</string>
    <string name="node_selection">节点选择</string>
    <string name="set_server_node">选择您需要连接的服务器节点</string>
    <string name="operating_guide">使用指南</string>
    <string name="version_information">版本信息</string>
    <string name="about">关于我们</string>
    <string name="charge_unit">计价单位</string>
    <string name="set_pricing_unit">设置您偏好的计价单位</string>
    <string name="Username">用户名：</string>
    <string name="password_login">密码：</string>
    <string name="login_btn">登录</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_txt">我已确认我已经备份好我的密码（您的密码是登录的唯一凭证，一旦丢失，您的帐号将无法找回，您的资产也会丢失。）</string>
    <string name="register">注册</string>
    <string name="to_login_btn">已有帐号，去登录</string>
    <string name="total_amount">折合总金额约:</string>
    <string name="str_asset">   资  产</string>
    <string name="str_order">   挂  单</string>
    <string name="str_usable">   可  用</string>
    <string name="str_transfer">转  账</string>
    <string name="str_transaction">交  易</string>
    <string name="str_type">类型</string>
    <string name="str_content">内容</string>
    <string name="str_price">价格：</string>
    <string name="str_time">时间：</string>
    <string name="str_num">数量：</string>
    <string name="str_cancel">取消</string>
    <string name="str_cancel_the_order">取消订单</string>
    <string name="str_order_number">订单号：#</string>
    <string name="str_update">更新抵押</string>
    <string name="str_strike_a_bargain">订单撮合</string>
    <string name="str_successful_use">成功用</string>
    <string name="str_byte_shop">购买了</string>
    <string name="str_ge">个</string>
    <string name="str_found">创建</string>
    <string name="str_registered">注册了</string>
    <string name="str_recommender">推荐人：</string>
    <string name="str_pay">向</string>
    <string name="str_transfers">转了</string>
    <string name="str_publish">发布订单</string>
    <string name="str_double_click">双击可以进入详细页面哦！</string>
    <string name="str_buy">买入</string>
    <string name="str_off_take">卖出</string>
    <string name="str_price2">价格</string>
    <string name="str_num2">数量</string>
    <string name="str_broadcast">正在发布广播。。。</string>
    <string name="str_detailed_information">详情</string>
    <string name="str_buy_sell">买/卖</string>
    <string name="have_in_hand">进行中</string>
    <string name="str_base_coin">基础资产：</string>
    <string name="str_quote_coin">目标资产：</string>
    <string name="str_new_price">最新成交价：</string>
    <string name="str_change">涨跌幅：</string>
    <string name="str_best_bid">最高买价：</string>
    <string name="str_best_ask">最低卖价：</string>
    <string name="str_open">最新开盘价：</string>
    <string name="str_finish">最新收盘价：</string>
    <string name="str_maximum_transaction_price">最高成交价：</string>
    <string name="str_lowest_bid_price">最低成交价：</string>
    <string name="str_expiration_time">到期时间：</string>
    <string name="The_username_does_not_contain_special_characters">用户名不能包含特殊字符</string>
    <string name="str_from">从</string>
    <string name="str_to">发往</string>
    <string name="str_balance">余额：</string>
    <string name="str_remarks">备注：</string>
    <string name="str_confirm">确定</string>
    <string name="c2cTitle">U2U兑换</string>
    <string name="c2c">U2U</string>
    <string name="look">观察</string>
    <string name="borrow">抵押</string>
</resources>
