<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_dialog"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/please_enter_password"
        android:textColor="@color/color_black"
        android:layout_height="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:background="@drawable/border_dialog"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/pwd_point"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/login_password"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_text"
            android:inputType="textPassword"
            android:lines="1"/>

        <TextView
            android:id="@+id/tv_dialog_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_invalid"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_darkGrey"
            android:textSize="16sp" />
        <TextView
            android:layout_width="1dp"
            android:background="@color/color_frenchGrey"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/color_darkGrey"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>