<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_dialog"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_app_dialog_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/please_enter_password"
        android:textColor="@color/color_black"
        android:layout_height="40dp"/>
    <TextView
        android:id="@+id/tv_app_dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/color_black"
        android:background="@drawable/border_dialog"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_app_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_frenchGrey"
            android:background="@drawable/select_dialog_btn"
            android:textSize="16sp" />
        <TextView
            android:layout_width="1px"
            android:background="@color/color_frenchGrey"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_app_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/color_frenchGrey"
            android:background="@drawable/select_dialog_btn"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>