<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <View
        android:id="@+id/v_purse_back"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <WebView
        android:id="@+id/iv_user_pho"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintLeft_toLeftOf="@+id/v_user_back"
        app:layout_constraintTop_toTopOf="@+id/v_user_back"

        android:layout_marginStart="13dp"
        />


    <TextView
        android:id="@+id/tv_purse_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="折合总金额约为：0.0000CNY"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/v_purse_back"
        app:layout_constraintRight_toRightOf="@+id/v_purse_back"

        app:layout_constraintBottom_toTopOf="@+id/tv_purse_hang"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <TextView
        android:id="@+id/tv_purse_hang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="20dp"
        android:text="可用额:4532.34CNY"
        android:textColor="@color/color_white"
        android:textSize="18sp"

        app:layout_constraintLeft_toRightOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_pho"/>

    <TextView
        android:id="@+id/tv_purse_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="132dp"
        android:text="挂单数:5"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/v_purse_back"
        app:layout_constraintLeft_toRightOf="@+id/tv_user_anotherName"
        app:layout_constraintTop_toBottomOf="@+id/tv_purse_hang"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        android:textColor="@color/color_white"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_pho"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_anotherName"
        app:layout_constraintLeft_toLeftOf="@+id/v_user_back"
        app:layout_constraintRight_toRightOf="@+id/tv_purse_hang"

        />

    <TextView
        android:id="@+id/tv_user_anotherName"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/alias"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        android:textColor="@color/color_white"
        app:layout_constraintLeft_toLeftOf="@+id/v_user_back"
        app:layout_constraintBottom_toBottomOf="@+id/v_purse_back"
        />


    <TextView
        android:id="@+id/tv_purse_allAsset"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/asset"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:layout_margin="5dp"
        android:background="?attr/backgroundView"
        android:textColor="?attr/colorValue"
        android:drawableRight="@drawable/image_arrow_right"
        android:drawableLeft="@drawable/image_purse_allpurse"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/v_purse_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_purse_rw"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/accessrecord"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="?attr/backgroundView"
        android:textColor="?attr/colorValue"
        android:drawableRight="@drawable/image_arrow_right"
        android:drawableLeft="@drawable/image_purse_recharge"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_purse_allAsset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_purse_deal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/tradingrecord"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="?attr/backgroundView"
        android:textColor="?attr/colorValue"
        android:drawableRight="@drawable/image_arrow_right"
        android:drawableLeft="@drawable/image_purse_business"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_purse_rw"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_purse_allRemain"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/wholeguadan"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="?attr/backgroundView"
        android:textColor="?attr/colorValue"
        android:drawableRight="@drawable/image_arrow_right"
        android:drawableLeft="@drawable/image_purse_guadan"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_purse_deal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_purse_backup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/walletbackup"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="?attr/backgroundView"
        android:textColor="?attr/colorValue"
        android:drawableRight="@drawable/image_arrow_right"
        android:drawableLeft="@drawable/image_purse_backup"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_purse_allRemain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/tv_user_logoff"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/logoff"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/backgroundView"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</android.support.constraint.ConstraintLayout>
