<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_Grey"
    tools:context="info.btsland.app.ui.activity.UserActivity">




    <!--  <LinearLayout
          android:id="@+id/ll_whitelist"
          android:layout_width="wrap_content"
          android:layout_height="50dp"
          android:orientation="horizontal"
          app:layout_constraintTop_toBottomOf="@+id/fra_whitelist_head"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/tv_whitelist_name"
          >

          &lt;!&ndash;<ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/user"
              />&ndash;&gt;

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="用户名：btsland"
              android:textSize="20sp"
              />




      </LinearLayout>
  </FrameLayout>-->
<!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/ll_whitelist"


        >


    </LinearLayout>-->

    <!--顶部导航栏-->
    <FrameLayout
        android:id="@+id/fra_whitelist_head"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_whitelist_1"
        />

    <TextView
        android:id="@+id/tv_whitelist_1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/whitetext"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fra_whitelist_head"
        app:layout_constraintLeft_toLeftOf="parent"


        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/iv_whitelist_pho"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/user"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_whitelist_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_whitelist_name"


        tools:ignore="RtlHardcoded"
        android:contentDescription="" />


    <TextView
        android:id="@+id/tv_whitelist_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/wusername"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        android:background="@drawable/tv_row"
        android:textColor="@color/color_white"
        app:layout_constraintTop_toBottomOf="@+id/tv_whitelist_1"

        app:layout_constraintLeft_toRightOf="@+id/iv_whitelist_pho"
        app:layout_constraintRight_toLeftOf="@+id/Btn_whitelist_add"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/Btn_whitelist_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="13sp"
        android:text="@string/whiteadd"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_whitelist_1"
        app:layout_constraintLeft_toRightOf="@+id/tv_whitelist_name"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />




</android.support.constraint.ConstraintLayout>













































